# skyser2003.github.io

./: .gitignore
.github/workflows/: gh-pages.yml
src/gh-pages/: README.md  eslint.config.mjs  package-lock.json  package.json
src/gh-pages/src/: App.vue  main.ts
src/gh-pages/src/app/: page.module.css  page.tsx  worker.ts  worker_enum.ts
src/gh-pages/src/assets/: lang_data.json
src/gh-pages/src/components/: HelloWorld.vue  TheWelcome.vue
src/gh-pages/src/components/icons/: IconGitHub.vue
src/gh-pages/src/data/: lang_data.json
src/gh-pages/src/models/language/: lang_manager.ts
src/gh-pages/src/types/: mui.d.ts
src/rust/: Cargo.toml
src/rust/.cargo/: config.toml
src/rust/src/: downloader.rs  generator.rs  lib.rs  model.rs  worker.rs
src/rust/tests/: browser_test.rs  inference.rs  integration_test.rs
