[package]
name = "gh-pages-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
burn = { version = "0.18.0", default-features = false, features = ["wgpu"] }
getrandom = { version = "0.3.3", default-features = false, features = [
    "wasm_js",
] }
wasm-bindgen = "0.2.100"
