[package]
name = "gh-pages-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candle-core = { version = "0.9.1", default-features = false }
candle-transformers = { version = "0.9.1", default-features = false }
tokenizers = { version = "0.21.4", default-features = false, features = [
	"fancy-regex",
] }
anyhow = { version = "1.0.99" }
clap = { version = "4.5.44", features = ["derive"] }
hf-hub = { version = "0.4.3", default-features = false, features = [
	"rustls-tls",
	"ureq",
] }
js-sys = { version = "0.3.77", default-features = false }
wasm-bindgen = { version = "0.2.100" }
getrandom_v2 = { version = "0.2", features = ["js"], package = "getrandom" }
getrandom = { version = "0.3.3", features = ["wasm_js"] }

[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }
