[package]
name = "gh-pages-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candle-core = { version = "0.9.1", default-features = false }
candle-transformers = { version = "0.9.1", default-features = false }
tokenizers = { version = "0.21.4", default-features = false, features = [
	"unstable_wasm",
] }
anyhow = { version = "1.0.99" }
clap = { version = "4.5.44", features = ["derive"] }
js-sys = { version = "0.3.77", default-features = false }
wasm-bindgen = { version = "0.2.100" }
web-sys = { version = "0.3.77", default-features = false, features = [
	"Storage",
	"Window",
	"IdbDatabase",
	"IdbOpenDbRequest",
	"IdbRequest",
	"IdbTransaction",
	"IdbObjectStore",
	"IdbFactory",
	"Event",
	"Request",
	"RequestInit",
	"RequestMode",
	"Response",
	"Headers",
	"Blob",
	"ReadableStream",
	"ReadableStreamDefaultReader",
	"IdbTransactionMode",
] }
wasm-bindgen-futures = "0.4.38"
candle-nn = "0.9.1"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
byteorder = { version = "1.5.0", default-features = false }
yew-agent = { version = "0.2", default-features = false }
yew = { version = "0.21.0", default-features = false, features = ["csr"] }

[dev-dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt"] }
wasm-bindgen-test = "0.3.50"
